# MobileManipulationCore

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
config/: piper_versions.yaml  policy_params.yaml  robot_params.yaml
deployment/: README.md
deployment/docker/: Dockerfile.jetson  Dockerfile.policy  docker-compose.yml  entrypoint.sh  entrypoint_policy.sh
deployment/k8s/: README.md
docs/: api_reference.md  design.md  openvla_remote.md  usage.md
docs/tmp/: a.md  c.md  g.md
scripts/: install_piper.sh  monitor_adapter_output.py  monitor_policy_output.py  setup_policy_server.sh  update_piper.sh
sim/: README.md
sim/launch/: gazebo_launch.py
sim/worlds/: empty_world.sdf
src/manipulation_adapter/: CMakeLists.txt  package.xml
src/manipulation_adapter/src/: adapter_node.cpp
src/manipulation_bringup/: CMakeLists.txt  package.xml
src/manipulation_bringup/launch/: core_launch.py  ranger_integration.launch.py  sim_launch.py
src/manipulation_msgs/: CMakeLists.txt  package.xml
src/manipulation_msgs/action/: ManipulationTask.action
src/manipulation_msgs/msg/: Observation.msg  PolicyOutput.msg
src/manipulation_perception/: CMakeLists.txt  package.xml
src/manipulation_perception/src/: perception_node.cpp
src/manipulation_policy/: package.xml  setup.cfg  setup.py
src/manipulation_policy/launch/: remote_server_launch.py
src/manipulation_policy/manipulation_policy/: __init__.py  policy_node.py  policy_server.py  task_prompt_cli.py
tests/: README.md  test_openvla_server.py
tests/integration/: test_node_communication.py
tests/unit/: test_example.py  test_policy_server_prompt.py  test_policy_server_runtime.py
