<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation_bringup</name>
  <version>0.1.0</version>
  <description>Launch files to start the manipulation intelligence stack</description>
  <maintainer email="robo@example.com">MobileManipulationCore Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>manipulation_perception</exec_depend>
  <exec_depend>manipulation_policy</exec_depend>
  <exec_depend>manipulation_adapter</exec_depend>
  <exec_depend>manipulation_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
